Table product {
  product_id integer [pk]
  description varchar
  price decimal(10,2)
  quantity_in_stock integer
  last_ordered_date date
  category varchar 
  manufacturer varchar
  created_at timestamp
  updated_at timestamp
}

Table users {
  id integer [pk]
  username varchar
  name varchar
  surname varchar [unique]
  password varchar
  address varchar
  annual_leave_allowance integer
  role varchar
  salary integer 
  created_at timestamp
}

Table customers {
  customer_id integer [pk]
  name varchar
  address varchar
  email varchar [unique]
  phone_number varchar
  balance decimal(10,2)
  created_at timestamp
}

Table deliveries {
  delivery_id integer [pk]
  order_id integer [ref: > orders.order_id]
  delivery_date date
  delivered_at timestamp
  delivery_method varchar
  created_at timestamp
}

Table orders {
  order_id integer [pk]
  customer_id integer [ref: > customers.customer_id]
  user_id integer [ref: > users.id]
  status varchar
  total decimal(10,2)
  created_at timestamp
}

Table order_items {
  order_item_id integer [pk]
  order_id integer [ref: > orders.order_id]
  product_id integer [ref: > product.product_id]
  quantity integer
  unit_price decimal(10,2)
  line_total decimal(10,2)
  created_at timestamp
}

Table services {
  service_id integer [pk]
  service_name varchar
  duration_months integer
  monthly_cost decimal(10,2)
  customer_id integer [ref: > customers.customer_id]
  order_id integer [ref: > orders.order_id]
  created_at timestamp
}

Table company_directory {
  id integer [pk]
  name_company varchar [not null]
  phone_number varchar
  address varchar
  email varchar
  created_at timestamp
}

Table days {
  id integer [pk]
  company_id integer [ref: > company_directory.id]
  day_of_week varchar
  opening_hour time [null]
  closing_hour time [null]
  status varchar
  created_at timestamp
}
